--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,14 @@
     <string name="RegisterButton"> Register Now</string>
     <string name="Logo">TODO</string>
     <string name="NameRegister">Name</string>
-    <string name="Register">Login</string>
+    <string name="Register">Register</string>
     <string name="already_a_member">Already a member?</string>
     <string name="log_in">Log In</string>
+    <string name="registertext">Get Started</string>
+    <string name="registertextsub">By Creating A Free Account</string>
+    <string name="Confirm_Password">Confirm Password</string>
+    <string name="logout">Logout</string>
+    <string name="toggle_password_visibility">toggle</string>
 
 
 </resources>
